--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "bootstrap-icons": "^1.11.1",
+    "file-loader": "^6.2.0",
+    "framer-motion": "^10.16.5",
     "next": "14.0.0",
     "react": "^18",
     "react-dom": "^18",
