--- a/package.json
+++ b/package.json
@@ -9,9 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@prisma/client": "^5.6.0",
+    "argon2": "^0.31.2",
+    "axios": "^1.6.2",
     "bootstrap-icons": "^1.11.1",
     "file-loader": "^6.2.0",
     "framer-motion": "^10.16.5",
+    "jsonwebtoken": "^9.0.2",
     "next": "14.0.0",
     "react": "^18",
     "react-dom": "^18",
@@ -19,6 +23,7 @@
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.10",
+    "@types/jsonwebtoken": "^9.0.5",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
@@ -26,6 +31,7 @@
     "eslint": "^8",
     "eslint-config-next": "14.0.0",
     "postcss": "^8",
+    "prisma": "^5.6.0",
     "tailwindcss": "^3",
     "typescript": "^5"
   }
